# mirrormanager2

./: .coveragerc  .gitignore  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  67.patch  76.patch  80.patch  ChangeLog  Dockerfile  LICENSE-MIT-X11  LICENSES  MANIFEST.in  Makefile  README  README.mysql  README.rpm_setup  README.rst  TODO  Vagrantfile  Vagrantfile.example  createdb.py  fedora-messaging.toml.example  mirrormanager.proto  mirrormanager.spec  mirrormanager.spec.in  mirrormanager.tmpfiles  mirrormanager2.rpmlintrc  mm2_umdl2  push-mirroring  pyproject.toml  requirements.txt  requirements_mirrorlist.txt  rpmlint-mirrormanager.config  runserver.py  runtests.sh  setup.cfg  setup.py  start.sh  (+1 more)
.github/workflows/: ci.yml  label-when-deployed.yml
.s2i/: environment
alembic/: env.py
alembic/versions/: 24681dabe5fa_add_host_columns.py  920e847c8c36_add_admin_only_category.py
client/: README  report_mirror  report_mirror.conf
cron/: mirrormanager.cron
devel/: populate.py
devel/ansible/: playbook.yml
doc/: Makefile  conf.py  contributing.rst  contributors.rst  crawler.rst  database_schema.md  deployment.rst  development.rst  index.rst  mirrormanager.dia  structure.rst
doc/_static/: site.css
doc/_templates/: mm2-logo.html
fedmsg.d/: example-config.py
fedora-test-data/: README  fedora-linux-core-dirsonly.txt  fedora-linux-extras-dirsonly.txt  humbolt-pickle-unparsed.txt.bz2  humbolt-pickle.bz2  mirror-hosts-core.txt  mirror-hosts-extras.txt  trim.sh
mirrorlist/: README  mirrorlist_client.wsgi  mirrorlist_server.py  mirrorlist_statistics  mirrorlist_statistics.py  weighted_shuffle.py
mirrorlist-server/: README  mirrorlist_client.wsgi  mirrorlist_server.py  mirrorlist_server_test.py  mirrorlist_statistics.py  weighted_shuffle.py
mirrorlist-server/apache/: mirrorlist-server.conf
mirrorlist-server/supervisor/: mirrorlist-server.ini
mirrorlist-server/test/: induce-stress  server_tester.py
mirrorlist/apache/: mirrorlist-server.conf
mirrorlist/systemd/: mirrorlist-server.service  mirrormanager_tempfile.conf
mirrorlist/test/: server_tester.py
mirrormanager2/: __init__.py  admin.py  api.py  app.py  auth.py  checkin.py  client_secrets.json  database.py  default_config.py  forms.py  health_checks.py  local_auth.py  login.py  login_forms.py  oidc.py  perms.py  views.py  xml_rpc.py  xmlrpc.py
mirrormanager2/crawler/: cli.py  connection_pool.py  connector.py  constants.py  continents.py  crawler.py  fedora.py  ftp_connector.py  http_connector.py  log.py  notif.py  propagation.py  reporter.py  rsync_connector.py  states.py  threads.py  ui.py  utils.py
mirrormanager2/lib/: __init__.py  constants.py  database.py  geo.py  hostconfig.py  mirrorlist.py  model.py  notifications.py  pid.py  repomap.py  sync.py  umdl.py
mirrormanager2/utility/: add_product.py  common.py  crawler.py  create_install_repo.py  emergency_expire_repo.py  expire_statistics.py  generate_worldmap.py  last_sync.py  mirrorlist_statistics.py  move_devel_to_release.py  move_to_archive.py  netblocks.py  pagination.py  propagation.py  propagation_expire.py  umdl2.py  update_ec2_netblocks.py  update_master_directory_list.py  update_single_file_detail.py  upgrade_install_repo.py
mirrors/: .project  README.txt  crawler  crawler_perhost  dev-fas.cfg  dev.cfg  generate-mirrorlists  generate-redirector-lists  generate-worldmap  install.sh  manage-repo-redirects  no-keepalives.sh  refresh_mirrorlist_cache  sample-prod.cfg  setup.py  start-mirrors.in  start-mirrors.py  update-all  update-database  update-each-server  update-master-directory-list  update-mirrorlist-server  update-static-content
mirrors/internet2/: get_internet2_netblocks  i2.c
mirrors/mirrormanager/: json.py  my_validators.py
mirrors/mirrormanager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mirrors/mirrors/: IPy.py  categorymap.py  commands.py  controllers.py  hostconfig.py  identity_models.py  initial.py  json.py  lib.py  mirrorlist.py  model.py  my_validators.py  release.py  (+3 more)
mirrors/mirrors.egg-info/: PKG-INFO  SOURCES.txt  sqlobject.txt
server/: README.txt  UPGRADING.txt  add-instrepos  count-mirrorlist-hits  crawler  crawler_perhost  dev-fas.cfg  dev-generic.cfg  dev-rpmfusion.cfg  dev.cfg  errorcheck  generate-publiclist  generate-worldmap  get_global_netblocks  get_internet2_netblocks  import_centos  initialize-database  logrotate.conf  manage-repo-redirects  mirrormanager.conf  mirrormanager.wsgi  move-devel-to-release  move-to-archive  mv-instrepos  prod.cfg.example  refresh_mirrorlist_cache  releaseday  setup.py  start-mirrormanager.in  start-mirrormanager.py  update-database  update-database-schema  update-master-directory-list  update-mirrorlist-server  update-schema  update-static-content  vacuum-mirrormanager
server-scripts/: return_mirrorlist.py  update-all
tests/: __init__.py  auth.py  client_secrets.json  conftest.py  mirrormanager2.cfg  setup_test_container.sh  test_crawler.py  test_health_checks.py  test_mdtr.py  test_mirrorlist.py  test_mm_lib_model.py  test_mmlib.py  test_mta.py  test_netblocks.py  test_ui_admin.py  test_ui_app.py  test_umdl.py  test_usfd.py
utility/: alembic.ini  backend_tempfile.conf  check_db.py  clean_db_for_mm2.sql  country_continent.csv  crawler.py  crawler_perhost.py  get_global_netblocks  get_internet2_netblocks  mirrormanager.conf.sample  mirrormanager.cron  mirrormanager2.cfg.sample  mirrormanager2.spec  mirrormanager2.wsgi  mm2_crawler  mm2_crawler.logrotate  mm2_create_install_repo  mm2_emergency-expire-repo  mm2_generate-worldmap  mm2_get_global_netblocks  mm2_get_internet2_netblocks  mm2_last-sync  mm2_move-devel-to-release  mm2_move-to-archive  mm2_propagation  mm2_refresh_mirrorlist_cache  mm2_umdl.logrotate  mm2_umdl2  mm2_update-EC2-netblocks  mm2_update-master-directory-list  mm2_update-mirrorlist-server  mm2_update-single-file-detail  mm2_upgrade-install-repo  move-devel-to-release  move-to-archive  test.cfg  umdl.py  update-EC2-netblocks  update-master-directory-list  update-mirrorlist-server  (+1 more)
(+385 files in other folders)
