[metadata]
name = mirrormanager2
version = attr: mirrormanager2.__version__
description = MirrorManager2 is the application used to managed the Fedora mirrors all over the world.
author = Fedora Infrastructure team
author_email = admin@fedoraproject.org
maintainer = Pierre-Yves Chibon
maintainer_email = pingou@pingoured.fr
url = https://github.com/fedora-infra/mirrormanager2
download_url = https://github.com/fedora-infra/mirrormanager2/releases
license = MIT

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires = file:requirements.txt
scripts =
    client/report_mirror
    mirrorlist/mirrorlist_statistics
    utility/mm2_crawler
    utility/mm2_emergency-expire-repo
    utility/mm2_generate-worldmap
    utility/mm2_get_global_netblocks
    utility/mm2_get_internet2_netblocks
    utility/mm2_move-devel-to-release
    utility/mm2_move-to-archive
    utility/mm2_propagation
    utility/mm2_update-EC2-netblocks
    utility/mm2_update-master-directory-list
    utility/mm2_umdl2
    utility/mm2_create_install_repo
    utility/mm2_upgrade-install-repo

[options.packages.find]
exclude =
    tests
